// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="Button"
/>
`;

exports[`renders correctly with custom class 1`] = `
<button
  className="Button test-class"
/>
`;
